JumpScript/tests/baselines/reference/relativePathMustResolve.errors.txt
tests/cases/conformance/externalModules/foo_1.jump(1,22): error TS2307: Cannot find module './test/foo'.


==== tests/cases/conformance/externalModules/foo_1.jump (1 errors) ====
    import foo = require('./test/foo');
                         ~~~~~~~~~~~~
!!! error TS2307: Cannot find module './test/foo'.
    var z = foo.x + 10;
    
==== tests/cases/conformance/externalModules/foo_0.jump (0 errors) ====
    export var x = 42;
    